Fixed styles to wrap text on news content

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -704,6 +704,7 @@ a.section-menu-item:hover {
 
 .post-content p {
     margin: 10px 0;
+    word-wrap: break-word;
 }
 
 .post-content ul {
